--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <a-scene id="scene" background="color: #000000">
-            <a-sky src=".VR/sumset.jpeg">
+            <a-sky src="Umi.jpeg">
             </a-sky>
             <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow>
             </a-box>
